[package]
name = "bamboo_auth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
redis = "0.21.0"
sodiumoxide = "0.2.7"
serde = "1.0"
serde_json = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
