[package]
name = "bamboo_auth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.7", features = ["postgres", "sqlite", "mysql"] }
redis = "0.21.0"
config = "0.11"
sodiumoxide = "0.2.7"
serde = "1.0"
serde_json = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
